--- a/common/ryantibs.bib
+++ b/common/ryantibs.bib
@@ -1,12 +1,23 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Ryan Tibshirani at 2023-02-19 12:40:53 -0800 
+%% Created for Ryan Tibshirani at 2023-02-25 14:03:50 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{dobriban2021distributed,
+	author = {Edgar Dobriban and Yue Sheng},
+	date-added = {2023-02-25 13:59:56 -0800},
+	date-modified = {2023-02-25 14:03:24 -0800},
+	journal = {Annals of Statistics},
+	number = {2},
+	pages = {918--943},
+	title = {Distributed linear regression by averaging},
+	volume = {49},
+	year = {2021}}
 
 @article{foster1994risk,
 	author = {Dean P. Foster and Edward I. George},
@@ -520,9 +531,9 @@
 	year = {1934}}
 
 @book{robertson1998order,
-	author = {Roberston, Tim and Wright, F. T. and Dykstra, Richard L.},
+	author = {Robertson, Tim and Wright, F. T. and Dykstra, Richard L.},
 	date-added = {2022-03-07 14:32:36 -0500},
-	date-modified = {2022-03-07 14:36:49 -0500},
+	date-modified = {2023-02-20 10:11:14 -0800},
 	publisher = {Wiley},
 	title = {Order Restricted Statistical Inference},
 	year = {1998}}
@@ -1637,11 +1648,14 @@
 	volume = {15},
 	year = {2022}}
 
-@unpublished{kobak2018optimal,
+@article{kobak2020optimal,
 	author = {Dmitry Kobak and Jonathan Lomond and Benoit Sanchez},
-	note = {arXiv: 1805.10939},
-	title = {Optimal ridge penalty for real-world high-dimensional data can be zero or negative due to the implicit ridge regularization},
-	year = {2018}}
+	date-modified = {2023-02-25 06:43:00 -0800},
+	journal = {Journal of Machine Learning Research},
+	pages = {1--16},
+	title = {The optimal ridge penalty for real-world high-dimensional data can be zero or negative due to the implicit ridge regularization},
+	volume = {21},
+	year = {2020}}
 
 @inproceedings{jahja2019kalman,
 	author = {Maria Jahja and David Farrow and Roni Rosenfeld and Ryan J. Tibshirani},
