--- a/lectures/review/review.tex
+++ b/lectures/review/review.tex
@@ -661,8 +661,8 @@ conventional wisdom is that we want to balance these in order to make accurate
 predictions.
 
 Interestingly, the bias-variance decomposition has been called into question in
-recent years, with regards to the study of overparameterized estimators in
-machine learning. But I don't really think that the fundamental idea of
+recent years, with regards to the study of overparametrized estimators in
+machine learning. But I don't really think that the fundamental idea of 
 ``balancing bias and variance being a good thing'' is actually contradicted 
 here. It's more that bias and variance can manifest themselves in strange ways
 in these settings. We'll cover this later in the course. 
