--- a/lectures/splines_rkhs/splines_rkhs.tex
+++ b/lectures/splines_rkhs/splines_rkhs.tex
@@ -1088,7 +1088,7 @@ Note that there are 3 linear constraints here (since each $x_i$ is in $\R^2$),
 and there are $n+3$ parameters in \eqref{eq:polyharmonic}, which means that in
 total, subject the constraints, we have $n$ free parameters.  
 
-Using this constrained parameterization, we can translate \eqref{eq:thin_plate2}
+Using this constrained parametrization, we can translate \eqref{eq:thin_plate2}
 into a finite-dimensional problem. One can show that it is a constrained
 generalized ridge regression, thus its solution, the fitted coefficients
 \smash{$\hat{a}, \hat{b}, \hbeta$}, are linear in $Y$. As we make predictions
