--- a/lectures/lasso/lasso.tex
+++ b/lectures/lasso/lasso.tex
@@ -55,7 +55,7 @@ $i=1,\dots,n$ are i.i.d.\ such that $X^\T X$ is almost surely invertible, and
 y_i = x_i^\T \beta_0 + \epsilon_i, \quad i=1,\dots,n,
 \]
 where $\epsilon_i$ has mean zero and variance $\sigma^2$, and $\epsilon_i \indep
-x_i$. Note that we can equivalently write this as 
+x_i$. Of course, we can equivalently write this as 
 \begin{equation}
 \label{eq:model}
 Y = X\beta_0 + \epsilon.
