--- a/lectures/splines_rkhs/splines_rkhs.tex
+++ b/lectures/splines_rkhs/splines_rkhs.tex
@@ -484,7 +484,7 @@ $k=2m-1$ with tuning parameter \smash{$\lambda \asymp n^{1/(2m+1)}$} satisfies
 \max \Big\{ \|\hf - f_0\|_n^2 , \, \|\hf - f_0\|_2^2 \Big\} \lesssim
 n^{-2m/(2m+1)} \quad \text{in probability},
 \]
-with respect to draws of $(x_i,y_i)$, $i=1,\dots,n$.
+with respect to randomness in the draws of $(x_i,y_i)$, $i=1,\dots,n$. 
 
 \section{Sobolev theory*}
 
