--- a/homeworks/homework2/homework2.tex
+++ b/homeworks/homework2/homework2.tex
@@ -283,8 +283,8 @@ Y = X\beta_0 + \epsilon.
 \end{gathered}
 \end{equation}
 Here, $F$ and $G$ are distributions on $\R$ that have mean zero and variance
-$\sigma^2 > 0$ and $r^2 \geq 0$, respectively. Abbreviate $\gamma = (F,G)$, and 
-let $\Gamma$ denote the set of all such pairs of distributions $(F,G)$ that
+$\sigma^2 > 0$ and $r^2 / d \geq 0$, respectively. Abbreviate $\gamma = (F,G)$,
+and let $\Gamma$ denote the set of all such pairs of distributions $(F,G)$ that 
 satisfy these moment conditions. 
 
 We can think of $F$ and $G$ as describing a noise and prior distribution,
