--- a/homeworks/homework2/homework2.tex
+++ b/homeworks/homework2/homework2.tex
@@ -146,7 +146,7 @@ proxy $\sigma^2$. (We assume nothing about their dependence structure.)
   \E \Big[ \max_{i=1,\dots,n} \, X_i \Big] \leq \sigma \sqrt{2 \log n}. 
   \]
 
-\item Prove that for any $\lambda \in \R$,
+\item Prove that for any $\lambda \geq 0$,
   \marginpar{\small [2 pts]}
   \[
   \P \Big(\max_{i=1,\dots,n} \, X_i \geq \lambda \Big) \leq ne^{-\lambda^2 /
