--- a/homeworks/homework2/homework2.tex
+++ b/homeworks/homework2/homework2.tex
@@ -154,7 +154,7 @@ proxy $\sigma^2$. (We assume nothing about their dependence structure.)
   \]
 
   Hint: use the fact that \smash{$\P(X_i \geq \lambda) \leq e^{-\lambda^2 / 
-    (2\sigma^2)}$}, for any $\lambda \in \R$, which you can view as a
+    (2\sigma^2)}$}, for any $\lambda \geq 0$, which you can view as a
   consequence of the tail bound for sub-Gaussian averages when $n=1$. 
 
 \item Reparametrize the result in part (c) to show that for any $t>0$,
