--- a/homeworks/homework2/homework2.tex
+++ b/homeworks/homework2/homework2.tex
@@ -228,8 +228,8 @@ where $Y = (y_1,\dots,y_n) \in \R^n$ is the response vector, $X \in \R^{n \times
   \smash{$V = \hSigma-\Sigma$}. Prove that    
   \marginpar{\small [2 pts]}
   \[
-  \E\Big[ \max_{j,k=1,\dots,d} \, |V_{jk}| \Big] \leq 2M^2 \sqrt{\frac{2
-      \log(2d^2)}{n}}.  
+  \E\Big[ \max_{j,k=1,\dots,d} \, |V_{jk}| \Big] \leq M^2 \sqrt{\frac{2
+      \log(2d^2)}{n}}.   
   \]
 
   Hint: apply part (b) to the entries of $V$.
@@ -238,8 +238,8 @@ where $Y = (y_1,\dots,y_n) \in \R^n$ is the response vector, $X \in \R^{n \times
   risk satisfying 
   \marginpar{\small [5 pts]}
   \[
-  \E[(x_0^\T \hbeta - x_0^\T \beta_0)^2] \leq 4M \sigma \|\beta_0\|_1
-  \sqrt{\frac{2 \log(2d)}{n}} + 8 M^2 \|\beta_0\|_1^2 \sqrt{\frac{2
+  \E[(x_0^\T \hbeta - x_0^\T \beta_0)^2] \leq 8M \sigma \|\beta_0\|_1
+  \sqrt{\frac{2 \log(2d)}{n}} + 4M^2 \|\beta_0\|_1^2 \sqrt{\frac{2
       \log(2d^2)}{n}},  
   \]
   where the expectation is taken over the training data $(x_i,y_i)$,
