--- a/common/ryantibs.bib
+++ b/common/ryantibs.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Ryan Tibshirani at 2023-02-25 14:03:50 -0800 
+%% Created for Ryan Tibshirani at 2023-03-04 05:34:54 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{bogachev2007measure,
+	author = {Vladimir I. Bogachev},
+	date-added = {2023-02-28 06:52:06 -0800},
+	date-modified = {2023-02-28 06:52:32 -0800},
+	publisher = {Springer},
+	title = {Measure Theory},
+	year = {2007}}
 
 @article{dobriban2021distributed,
 	author = {Edgar Dobriban and Yue Sheng},
@@ -2105,11 +2113,15 @@
 	title = {Scaling description of generalization with number of parameters in deep learning},
 	year = {2019}}
 
-@unpublished{hastie2019surprises,
+@article{hastie2022surprises,
 	author = {Trevor Hastie and Andrea Montanari and Saharon Rosset and Ryan J. Tibshirani},
-	note = {arXiv: 1903.08560},
+	date-modified = {2023-03-04 05:34:53 -0800},
+	journal = {Annals of Statistics},
+	number = {2},
+	pages = {949--986},
 	title = {Surprises in high-dimensional ``ridgeless'' least squares interpolation},
-	year = {2019}}
+	volume = {50},
+	year = {2022}}
 
 @article{trench1999asymptotic,
 	author = {William F. Trench},
